ELS Code/main/default/objects/Raw_Contact__c/Raw_Contact__c.object-meta.xml
<CustomObject>
    <label>Raw Contact</label>
    <nameField>
        <label>Raw Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Raw Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>