ELS Code/main/default/objects/Raw_Contact__c/fields/Best_Time_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Contact__c</fullName>
    <label>Best Time to Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>