ELS Code/main/default/objects/Raw_Contact__c/fields/Camping_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Camping_Frequency__c</fullName>
    <label>Camping Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-5</fullName>
            </value>
            <value>
                <fullName>6-10</fullName>
            </value>
            <value>
                <fullName>11+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>