ELS Code/main/default/objects/Raw_Contact__c/fields/Camping_Method__c.field-meta.xml
<CustomField>
    <fullName>Camping_Method__c</fullName>
    <label>Camping Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>