ELS Code/main/default/objects/Raw_Contact__c/fields/Campus_A_Profile__c.field-meta.xml
<CustomField>
    <fullName>Campus_A_Profile__c</fullName>
    <label>Campus A Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>