ELS Code/main/default/objects/Raw_Contact__c/fields/Canada_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Canada_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canadian Opt-In</label>
    <type>Checkbox</type>
</CustomField>