ELS Code/main/default/objects/Raw_Contact__c/fields/City_1__c.field-meta.xml
<CustomField>
    <fullName>City_1__c</fullName>
    <label>City 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>