ELS Code/main/default/objects/Raw_Contact__c/fields/City_2__c.field-meta.xml
<CustomField>
    <fullName>City_2__c</fullName>
    <label>City 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>