ELS Code/main/default/objects/Raw_Contact__c/fields/Client_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>Client_Type_Label__c</fullName>
    <label>Client Type Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>