ELS Code/main/default/objects/Raw_Contact__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>260</length>
    <type>LongTextArea</type>
</CustomField>