ELS Code/main/default/objects/Raw_Contact__c/fields/Country_1__c.field-meta.xml
<CustomField>
    <fullName>Country_1__c</fullName>
    <label>Country 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>