ELS Code/main/default/objects/Raw_Contact__c/fields/Create_Activities_and_Interests__c.field-meta.xml
<CustomField>
    <fullName>Create_Activities_and_Interests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Activities and Interests?</label>
    <type>Checkbox</type>
</CustomField>