ELS Code/main/default/objects/Raw_Contact__c/fields/Do_Not_SMS__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Textey opt-out field.</description>
    <inlineHelpText>Textey opt-out field.</inlineHelpText>
    <label>Do Not SMS</label>
    <type>Checkbox</type>
</CustomField>