ELS Code/main/default/objects/Raw_Contact__c/fields/FB_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>FB_Birth_Date__c</fullName>
    <label>FB Birth Date</label>
    <type>Date</type>
</CustomField>