ELS Code/main/default/objects/Raw_Contact__c/fields/FB_Location__c.field-meta.xml
<CustomField>
    <fullName>FB_Location__c</fullName>
    <label>FB Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>