ELS Code/main/default/objects/Raw_Contact__c/fields/File_From__c.field-meta.xml
<CustomField>
    <fullName>File_From__c</fullName>
    <label>File From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>