ELS Code/main/default/objects/Raw_Contact__c/fields/FLAS__c.field-meta.xml
<CustomField>
    <fullName>FLAS__c</fullName>
    <formula>IF( OR( ISBLANK( First_Name__c), ISBLANK( Last_Name__c), ISBLANK(Street_1__c+Street_2__c), ISBLANK( State_1__c)) ,null, 

IF ( AND( NOT(ISBLANK(Street_1__c)), NOT(ISBLANK(Street_2__c))), 
          MID( First_Name__c , 0, 1) &amp; Last_Name__c &amp; MID( Street_1__c+&apos; &apos;+Street_2__c , 0, 9) &amp; State_1__c, 
          IF ( AND( NOT(ISBLANK(Street_1__c)), ISBLANK(Street_2__c)), 
                MID( First_Name__c , 0, 1) &amp; Last_Name__c &amp; MID( Street_1__c, 0, 9) &amp; State_1__c, 
          IF ( AND( ISBLANK(Street_1__c), NOT(ISBLANK(Street_2__c))), 
                MID( First_Name__c , 0, 1) &amp; Last_Name__c &amp; MID( Street_2__c, 0, 9) &amp; State_1__c, IF ( AND( ISBLANK(Street_1__c), ISBLANK(Street_2__c) ), 
                MID( First_Name__c , 0, 1) &amp; Last_Name__c &amp; State_1__c, &apos;&apos;
         )
      )
   )
)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FLAS</label>
    <type>Text</type>
</CustomField>