ELS Code/main/default/objects/Raw_Contact__c/fields/French_Canadian_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>French_Canadian_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>French Canadian Opt-In</label>
    <type>Checkbox</type>
</CustomField>