ELS Code/main/default/objects/Raw_Contact__c/fields/General_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>General_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General Opt-In</label>
    <type>Checkbox</type>
</CustomField>