ELS Code/main/default/objects/Raw_Contact__c/fields/IA_Information__c.field-meta.xml
<CustomField>
    <fullName>IA_Information__c</fullName>
    <label>IA Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>