ELS Code/main/default/objects/Raw_Contact__c/fields/Insert_Date__c.field-meta.xml
<CustomField>
    <fullName>Insert_Date__c</fullName>
    <label>Insert Date</label>
    <type>Date</type>
</CustomField>