ELS Code/main/default/objects/Raw_Contact__c/fields/Is_From_Silverpop__c.field-meta.xml
<CustomField>
    <fullName>Is_From_Silverpop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is From Silverpop</label>
    <type>Checkbox</type>
</CustomField>