ELS Code/main/default/objects/Raw_Contact__c/fields/Is_New_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is New Lead</label>
    <type>Checkbox</type>
</CustomField>