ELS Code/main/default/objects/Raw_Contact__c/fields/LAZ__c.field-meta.xml
<CustomField>
    <fullName>LAZ__c</fullName>
    <formula>IF( OR( ISBLANK(Last_Name__c), ISBLANK(Street_1__c+Street_2__c), ISBLANK( Zip_1__c)) ,null, 

IF ( AND( NOT(ISBLANK(Street_1__c)), NOT(ISBLANK(Street_2__c))), 
          Last_Name__c &amp; MID( Street_1__c+&apos; &apos;+Street_2__c , 0, 9) &amp; MID( Zip_1__c , 0, 5), 

          IF ( AND( NOT(ISBLANK(Street_1__c)), ISBLANK(Street_2__c)), 
                Last_Name__c &amp; MID( Street_1__c, 0, 9) &amp; MID( Zip_1__c , 0, 5), 

          IF ( AND( ISBLANK(Street_1__c), NOT(ISBLANK(Street_2__c))), 
                Last_Name__c &amp; MID( Street_2__c , 0, 9) &amp; MID( Zip_1__c , 0, 5), IF ( AND( ISBLANK(Street_1__c), ISBLANK(Street_2__c) ), 
                Last_Name__c &amp; MID( Zip_1__c , 0, 5), &apos;&apos;
         )
      )
   )
)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LAZ</label>
    <type>Text</type>
</CustomField>