ELS Code/main/default/objects/Raw_Contact__c/fields/Lead_Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Description__c</fullName>
    <label>Lead Source Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>