ELS Code/main/default/objects/Raw_Contact__c/fields/Marketing_Code__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Code__c</fullName>
    <label>Marketing Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>