ELS Code/main/default/objects/Raw_Contact__c/fields/Member_of_Thousand_Trails__c.field-meta.xml
<CustomField>
    <fullName>Member_of_Thousand_Trails__c</fullName>
    <label>Member of Thousand Trails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>