ELS Code/main/default/objects/Raw_Contact__c/fields/Need_Kitchen__c.field-meta.xml
<CustomField>
    <fullName>Need_Kitchen__c</fullName>
    <label>Need Kitchen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>