ELS Code/main/default/objects/Raw_Contact__c/fields/Number_of_RVS__c.field-meta.xml
<CustomField>
    <fullName>Number_of_RVS__c</fullName>
    <label>Number of RVS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>