ELS Code/main/default/objects/Raw_Contact__c/fields/Originating_Source__c.field-meta.xml
<CustomField>
    <fullName>Originating_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Source</label>
    <referenceTo>Sources__c</referenceTo>
    <relationshipLabel>Raw Contacts</relationshipLabel>
    <relationshipName>Raw_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>