ELS Code/main/default/objects/Raw_Contact__c/fields/Own_an_RV__c.field-meta.xml
<CustomField>
    <fullName>Own_an_RV__c</fullName>
    <label>Own an RV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>