ELS Code/main/default/objects/Raw_Contact__c/fields/PF__c.field-meta.xml
<CustomField>
    <fullName>PF__c</fullName>
    <formula>IF( OR( ISBLANK( Phone__c ), ISBLANK(First_Name__c)) ,null, Phone__c &amp; First_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PF</label>
    <type>Text</type>
</CustomField>