ELS Code/main/default/objects/Raw_Contact__c/fields/PL__c.field-meta.xml
<CustomField>
    <fullName>PL__c</fullName>
    <formula>IF( OR( ISBLANK( Phone__c ), ISBLANK( Last_Name__c)) ,null, Phone__c &amp; Last_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PL</label>
    <type>Text</type>
</CustomField>