ELS Code/main/default/objects/Raw_Contact__c/fields/Receive_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Receive_Newsletter__c</fullName>
    <label>Receive Newsletter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>