ELS Code/main/default/objects/Raw_Contact__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RCG</fullName>
            </value>
            <value>
                <fullName>Sugar CRM</fullName>
            </value>
            <value>
                <fullName>Woobox</fullName>
            </value>
            <value>
                <fullName>Joomla</fullName>
            </value>
            <value>
                <fullName>Search Climber</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>V Rez</fullName>
            </value>
            <value>
                <fullName>KOA Leads</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paid Online</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Mem</fullName>
            </value>
            <value>
                <fullName>Silver Pop</fullName>
            </value>
            <value>
                <fullName>Co-Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>