ELS Code/main/default/objects/Raw_Contact__c/fields/Resort_Interested__c.field-meta.xml
<CustomField>
    <fullName>Resort_Interested__c</fullName>
    <label>Resort Interested</label>
    <type>TextArea</type>
</CustomField>