ELS Code/main/default/objects/Raw_Contact__c/fields/RVOTGPROFILE__c.field-meta.xml
<CustomField>
    <fullName>RVOTGPROFILE__c</fullName>
    <label>RVOTGPROFILE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>