ELS Code/main/default/objects/Raw_Contact__c/fields/SF_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_Record_ID__c</fullName>
    <label>SF Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>