ELS Code/main/default/objects/Raw_Contact__c/fields/Spanish_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spanish Opt-In</label>
    <type>Checkbox</type>
</CustomField>