ELS Code/main/default/objects/Raw_Contact__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVATED</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Contract Sent</fullName>
            </value>
            <value>
                <fullName>CONTRACTVOIDED</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>DECLINE</fullName>
            </value>
            <value>
                <fullName>EXISTINGMEMBER</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>NOCONTACTINFO</fullName>
            </value>
            <value>
                <fullName>NOTQUALIFIED</fullName>
            </value>
            <value>
                <fullName>Recycled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>