ELS Code/main/default/objects/Raw_Contact__c/fields/Subid__c.field-meta.xml
<CustomField>
    <fullName>Subid__c</fullName>
    <label>Subid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>