ELS Code/main/default/objects/Raw_Contact__c/fields/Want_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Want_Newsletter__c</fullName>
    <label>Want Newsletter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>