ELS Code/main/default/objects/Raw_Contact__c/fields/Web_Form_Description__c.field-meta.xml
<CustomField>
    <fullName>Web_Form_Description__c</fullName>
    <label>Web Form Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>