ELS Code/main/default/objects/Raw_Contact__c/fields/Zip_1__c.field-meta.xml
<CustomField>
    <fullName>Zip_1__c</fullName>
    <label>Zip 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>