ELS Code/main/default/objects/Raw_Contact__c/fields/Zip_2__c.field-meta.xml
<CustomField>
    <fullName>Zip_2__c</fullName>
    <label>Zip 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>