ELS Code/main/default/objects/Raw_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Last_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Add_Date__c</columns>
    <columns>Is_Processed__c</columns>
    <columns>IsError__c</columns>
    <columns>SF_Record_ID__c</columns>
    <columns>Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>